--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "lint"
   ],
   "dependencies": {
-    "@cesarbr/knot-cloud-sdk-js": "^1.1.0",
+    "@cesarbr/knot-cloud-sdk-js": "file:../knot-cloud-sdk-js",
+    "amqplib": "^0.5.5",
     "colors": "^1.3.3",
     "fs-extra": "^7.0.1",
     "git-clone": "^0.1.0",
